<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_display_favorites_key"
        android:summaryOff="@string/pref_description_display_favorites_off"
        android:summaryOn="@string/pref_description_display_favorites_on"
        android:title="@string/pref_title_display_favorites" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_sort_order_titles"
        android:entryValues="@array/pref_sort_order_values"
        android:key="@string/pref_sort_order_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/pref_title_sort_order" />

</PreferenceScreen>
